--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="yandex-verification" content="7c93638dcb71f020" />
 <base href="https://vulkanrussiamsk.fit/">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="theme-color" content="#ffffff">
